feat(example): add `datastruct_thread_timer`

--- a/vitis/cpp_datastruct_system/.project
+++ b/vitis/cpp_datastruct_system/.project
@@ -14,6 +14,7 @@
 		<project>datastruct_big_integer</project>
 		<project>datastruct_float_multiprecision</project>
 		<project>datastruct_async_timer</project>
+		<project>datastruct_thread_timer</project>
 		<project>datastruct_async_signal</project>
 	</projects>
 	<buildSpec>
