--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,32 @@
 os: Ubuntu2004
 platform:
   - x64
+install:
+  - sudo apt update
+  - sudo apt install -y ca-certificates
+  - . /etc/os-release
+  - echo "deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_${VERSION_ID}/ /" | sudo tee /etc/apt/sources.list.d/devel:kubic:libcontainers:stable.list
+  - curl -L https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_${VERSION_ID}/Release.key | sudo apt-key add -
+  - sudo apt update
+  - sudo apt -y upgrade
+  - sudo apt -y install podman
+build_script:
+  - podman build -t extra2000/vitis-cpp-datastruct -f Dockerfile.x86_64
+  - mkdir -pv build
+  - podman run --rm -v ${APPVEYOR_BUILD_FOLDER}/vitis:${APPVEYOR_BUILD_FOLDER}/vitis:ro -v ${APPVEYOR_BUILD_FOLDER}/build:${APPVEYOR_BUILD_FOLDER}/build:rw --workdir ${APPVEYOR_BUILD_FOLDER}/build extra2000/vitis-cpp-datastruct cmake ../vitis
+  - podman run --rm -v ${APPVEYOR_BUILD_FOLDER}/vitis:${APPVEYOR_BUILD_FOLDER}/vitis:ro -v ${APPVEYOR_BUILD_FOLDER}/build:${APPVEYOR_BUILD_FOLDER}/build:rw --workdir ${APPVEYOR_BUILD_FOLDER}/build extra2000/vitis-cpp-datastruct make
+  - podman run --rm -v ${APPVEYOR_BUILD_FOLDER}/vitis:${APPVEYOR_BUILD_FOLDER}/vitis:ro -v ${APPVEYOR_BUILD_FOLDER}/build:${APPVEYOR_BUILD_FOLDER}/build:rw --workdir ${APPVEYOR_BUILD_FOLDER}/build extra2000/vitis-cpp-datastruct ./datastruct_async_signal
+  - podman run --rm -v ${APPVEYOR_BUILD_FOLDER}/vitis:${APPVEYOR_BUILD_FOLDER}/vitis:ro -v ${APPVEYOR_BUILD_FOLDER}/build:${APPVEYOR_BUILD_FOLDER}/build:rw --workdir ${APPVEYOR_BUILD_FOLDER}/build extra2000/vitis-cpp-datastruct ./datastruct_async_timer
+  - podman run --rm -v ${APPVEYOR_BUILD_FOLDER}/vitis:${APPVEYOR_BUILD_FOLDER}/vitis:ro -v ${APPVEYOR_BUILD_FOLDER}/build:${APPVEYOR_BUILD_FOLDER}/build:rw --workdir ${APPVEYOR_BUILD_FOLDER}/build extra2000/vitis-cpp-datastruct ./datastruct_big_integer
+  - podman run --rm -v ${APPVEYOR_BUILD_FOLDER}/vitis:${APPVEYOR_BUILD_FOLDER}/vitis:ro -v ${APPVEYOR_BUILD_FOLDER}/build:${APPVEYOR_BUILD_FOLDER}/build:rw --workdir ${APPVEYOR_BUILD_FOLDER}/build extra2000/vitis-cpp-datastruct ./datastruct_class
+  - podman run --rm -v ${APPVEYOR_BUILD_FOLDER}/vitis:${APPVEYOR_BUILD_FOLDER}/vitis:ro -v ${APPVEYOR_BUILD_FOLDER}/build:${APPVEYOR_BUILD_FOLDER}/build:rw --workdir ${APPVEYOR_BUILD_FOLDER}/build extra2000/vitis-cpp-datastruct ./datastruct_class_template
+  - podman run --rm -v ${APPVEYOR_BUILD_FOLDER}/vitis:${APPVEYOR_BUILD_FOLDER}/vitis:ro -v ${APPVEYOR_BUILD_FOLDER}/build:${APPVEYOR_BUILD_FOLDER}/build:rw --workdir ${APPVEYOR_BUILD_FOLDER}/build extra2000/vitis-cpp-datastruct ./datastruct_file_operations --cfgfile test.cfg
+  - podman run --rm -v ${APPVEYOR_BUILD_FOLDER}/vitis:${APPVEYOR_BUILD_FOLDER}/vitis:ro -v ${APPVEYOR_BUILD_FOLDER}/build:${APPVEYOR_BUILD_FOLDER}/build:rw --workdir ${APPVEYOR_BUILD_FOLDER}/build extra2000/vitis-cpp-datastruct ./datastruct_float_multiprecision
+  - podman run --rm -v ${APPVEYOR_BUILD_FOLDER}/vitis:${APPVEYOR_BUILD_FOLDER}/vitis:ro -v ${APPVEYOR_BUILD_FOLDER}/build:${APPVEYOR_BUILD_FOLDER}/build:rw --workdir ${APPVEYOR_BUILD_FOLDER}/build extra2000/vitis-cpp-datastruct ./datastruct_linkedlist
+  - podman run --rm -v ${APPVEYOR_BUILD_FOLDER}/vitis:${APPVEYOR_BUILD_FOLDER}/vitis:ro -v ${APPVEYOR_BUILD_FOLDER}/build:${APPVEYOR_BUILD_FOLDER}/build:rw --workdir ${APPVEYOR_BUILD_FOLDER}/build extra2000/vitis-cpp-datastruct ./datastruct_vector
+  - podman run --rm -v ${APPVEYOR_BUILD_FOLDER}/vitis:${APPVEYOR_BUILD_FOLDER}/vitis:ro -v ${APPVEYOR_BUILD_FOLDER}/build:${APPVEYOR_BUILD_FOLDER}/build:rw --workdir ${APPVEYOR_BUILD_FOLDER}/build extra2000/vitis-cpp-datastruct ./datastruct_thread_timer
+  - podman run --rm -v ${APPVEYOR_BUILD_FOLDER}/vitis:${APPVEYOR_BUILD_FOLDER}/vitis:ro -v ${APPVEYOR_BUILD_FOLDER}/build:${APPVEYOR_BUILD_FOLDER}/build:rw --workdir ${APPVEYOR_BUILD_FOLDER}/build extra2000/vitis-cpp-datastruct ./datastruct_thread_timer_class
+  - podman run --rm -v ${APPVEYOR_BUILD_FOLDER}/vitis:${APPVEYOR_BUILD_FOLDER}/vitis:ro -v ${APPVEYOR_BUILD_FOLDER}/build:${APPVEYOR_BUILD_FOLDER}/build:rw --workdir ${APPVEYOR_BUILD_FOLDER}/build extra2000/vitis-cpp-datastruct ./helloworld
 on_success:
   - wget https://raw.githubusercontent.com/creationix/nvm/v0.39.0/install.sh
   - sudo bash install.sh
